CSS: Fix Add New Item Scrollbars (#7157)
See: https://mantis.ilias.de/view.php?id=40773

--- a/templates/default/070-components/legacy/Services/_component_object.scss
+++ b/templates/default/070-components/legacy/Services/_component_object.scss
@@ -60,3 +60,11 @@ div.ilCreationFormSection .form-horizontal {
         }
     }
 }
+
+#il-add-new-item-gl {
+    max-height: initial;
+
+    .row {
+        --bs-gutter-x: 0;
+    }
+}
